Some translations for future improvements

--- a/desktop-client/src/main/resources/i18n/messages_en.properties
+++ b/desktop-client/src/main/resources/i18n/messages_en.properties
@@ -9,6 +9,7 @@ auth.signInButton=Sign In
 auth.signingInButton=Signing in...
 auth.createAccountButton=Create Account
 auth.forgotPasswordLink=Forgot your password?
+auth.languageLabel=Language
 auth.error.invalidCredentials=Invalid credentials. Please try again.
 auth.error.fillAllFields=Please fill in all fields.
 auth.error.generic=An error occurred. Please try again.
@@ -41,6 +42,7 @@ main.taskTitle=Task
 main.solutionTitle=Solution
 # Menu
 menu.settings=Settings
+menu.preferences=Preferences...
 menu.logout=Logout
 menu.exit=Exit
 menu.help=Help
@@ -65,6 +67,8 @@ message.selectTask=Please select a task!
 message.noSolution=No solution available for this task.
 message.showSolutionConfirm=Are you sure you want to see the solution?\nThis will replace your current code.
 message.showSolutionTitle=Show Solution
+message.switchTaskConfirmTitle=Discard current solution?
+message.switchTaskConfirm=Your current solution will be cleared.\nDo you want to continue?
 message.taskAlreadyCompleted=Task already completed!
 message.correct=Correct! Great job!
 message.errorOccurred=An error occurred. Please try again.
@@ -92,3 +96,6 @@ about.content=<div style="text-align: center; padding: 20px;"><h1>SwingTeacher D
 # Documentation Dialog
 documentation.title=Documentation
 documentation.notAvailable=<h1>Documentation</h1><p>Documentation is not available.</p>
+# Settings
+settings.title=Settings
+settings.language=Language
