--- a/desktop-client/src/main/resources/i18n/messages_es.properties
+++ b/desktop-client/src/main/resources/i18n/messages_es.properties
@@ -9,6 +9,7 @@ auth.signInButton=Iniciar sesión
 auth.signingInButton=Iniciando sesión...
 auth.createAccountButton=Crear cuenta
 auth.forgotPasswordLink=¿Olvidaste tu contraseña?
+auth.languageLabel=Idioma
 auth.error.invalidCredentials=Credenciales inválidas. Por favor, intenta de nuevo.
 auth.error.fillAllFields=Por favor, completa todos los campos.
 auth.error.generic=Ocurrió un error. Por favor, intenta de nuevo.
@@ -41,6 +42,7 @@ main.taskTitle=Tarea
 main.solutionTitle=Solución
 # Menu
 menu.settings=Configuración
+menu.preferences=Preferencias...
 menu.logout=Cerrar sesión
 menu.exit=Salir
 menu.help=Ayuda
@@ -65,6 +67,8 @@ message.selectTask=¡Por favor, selecciona una tarea!
 message.noSolution=No hay solución disponible para esta tarea.
 message.showSolutionConfirm=¿Estás seguro de que quieres ver la solución?\nEsto reemplazará tu código actual.
 message.showSolutionTitle=Mostrar solución
+message.switchTaskConfirmTitle=¿Descartar la solución actual?
+message.switchTaskConfirm=Tu solución actual se borrará.\n¿Quieres continuar?
 message.taskAlreadyCompleted=¡La tarea ya está completada!
 message.correct=¡Correcto! ¡Buen trabajo!
 message.errorOccurred=Ocurrió un error. Por favor, intenta de nuevo.
@@ -92,3 +96,6 @@ about.content=<div style="text-align: center; padding: 20px;"><h1>SwingTeacher D
 # Documentation Dialog
 documentation.title=Documentación
 documentation.notAvailable=<h1>Documentación</h1><p>La documentación no está disponible.</p>
+# Settings
+settings.title=Configuración
+settings.language=Idioma
