--- a/desktop-client/src/main/resources/i18n/messages_it.properties
+++ b/desktop-client/src/main/resources/i18n/messages_it.properties
@@ -9,6 +9,7 @@ auth.signInButton=Accedi
 auth.signingInButton=Accesso in corso...
 auth.createAccountButton=Crea account
 auth.forgotPasswordLink=Hai dimenticato la password?
+auth.languageLabel=Lingua
 auth.error.invalidCredentials=Credenziali non valide. Riprova.
 auth.error.fillAllFields=Compila tutti i campi.
 auth.error.generic=Si è verificato un errore. Riprova.
@@ -41,6 +42,7 @@ main.taskTitle=Compito
 main.solutionTitle=Soluzione
 # Menu
 menu.settings=Impostazioni
+menu.preferences=Preferenze...
 menu.logout=Esci
 menu.exit=Esci
 menu.help=Aiuto
@@ -65,6 +67,8 @@ message.selectTask=Seleziona un compito!
 message.noSolution=Nessuna soluzione disponibile per questo compito.
 message.showSolutionConfirm=Sei sicuro di voler vedere la soluzione?\nQuesto sostituirà il tuo codice attuale.
 message.showSolutionTitle=Mostra soluzione
+message.switchTaskConfirmTitle=Eliminare la soluzione corrente?
+message.switchTaskConfirm=La tua soluzione corrente verrà cancellata.\nVuoi continuare?
 message.taskAlreadyCompleted=Compito già completato!
 message.correct=Corretto! Ottimo lavoro!
 message.errorOccurred=Si è verificato un errore. Riprova.
@@ -92,3 +96,6 @@ about.content=<div style="text-align: center; padding: 20px;"><h1>SwingTeacher D
 # Documentation Dialog
 documentation.title=Documentazione
 documentation.notAvailable=<h1>Documentazione</h1><p>La documentazione non è disponibile.</p>
+# Settings
+settings.title=Impostazioni
+settings.language=Lingua
