--- a/desktop-client/src/main/resources/i18n/messages_ru.properties
+++ b/desktop-client/src/main/resources/i18n/messages_ru.properties
@@ -9,6 +9,7 @@ auth.signInButton=Войти
 auth.signingInButton=Вход...
 auth.createAccountButton=Создать аккаунт
 auth.forgotPasswordLink=Забыли пароль?
+auth.languageLabel=Язык
 auth.error.invalidCredentials=Неверные учетные данные. Попробуйте снова.
 auth.error.fillAllFields=Пожалуйста, заполните все поля.
 auth.error.generic=Произошла ошибка. Попробуйте снова.
@@ -41,6 +42,7 @@ main.taskTitle=Задача
 main.solutionTitle=Решение
 # Menu
 menu.settings=Настройки
+menu.preferences=Настройки...
 menu.logout=Выйти
 menu.exit=Выход
 menu.help=Помощь
@@ -65,6 +67,8 @@ message.selectTask=Пожалуйста, выберите задачу!
 message.noSolution=Решение для этой задачи недоступно.
 message.showSolutionConfirm=Вы уверены, что хотите увидеть решение?\nЭто заменит ваш текущий код.
 message.showSolutionTitle=Показать решение
+message.switchTaskConfirmTitle=Сбросить текущее решение?
+message.switchTaskConfirm=Ваше текущее решение будет очищено.\nПродолжить?
 message.taskAlreadyCompleted=Задача уже выполнена!
 message.correct=Правильно! Отличная работа!
 message.errorOccurred=Произошла ошибка. Попробуйте снова.
@@ -92,3 +96,6 @@ about.content=<div style="text-align: center; padding: 20px;"><h1>SwingTeacher D
 # Documentation Dialog
 documentation.title=Документация
 documentation.notAvailable=<h1>Документация</h1><p>Документация недоступна.</p>
+# Settings
+settings.title=Настройки
+settings.language=Язык
