Renaming application to Java Swing Tutor

--- a/desktop-client/src/main/resources/i18n/messages_en.properties
+++ b/desktop-client/src/main/resources/i18n/messages_en.properties
@@ -33,7 +33,7 @@ registration.success=You are registered! Use your credentials to log in
 registration.error.checkForm=Please check the form and try again
 registration.error.generic=An error occurred. Please try again.
 # Main Frame
-main.title=SwingTeacher Desktop
+main.title=Java Swing Tutor
 main.lessonLabel=Lesson:
 main.taskLabel=Task:
 main.taskCounter=Task {0} of {1}
@@ -91,8 +91,8 @@ placeholder.selectTaskBegin=<p>Select a task to begin</p>
 placeholder.documentationNotAvailable=<p>Documentation not available</p>
 placeholder.selectTaskViewDoc=<p>Select a task to view documentation</p>
 # About Dialog
-about.title=About SwingTeacher
-about.content=<div style="text-align: center; padding: 20px;"><h1>SwingTeacher Desktop</h1><p style="color: #94a3b8;">Version 1.0-SNAPSHOT</p><hr><p>An interactive Java programming learning application.</p><h3>Features</h3><ul style="text-align: left;"><li>Syntax-highlighted code editor</li><li>Intelligent code completion</li><li>Task-based learning system</li><li>Progress tracking</li><li>Reference documentation</li></ul><hr><p style="color: #64748b; font-size: 12px;">Built with Java & Spring Framework</p></div>
+about.title=About Java Swing Tutor
+about.content=<div style="text-align: center; padding: 20px;"><h1>Java Swing Tutor</h1><p style="color: #94a3b8;">Version 1.0-SNAPSHOT</p><hr><p>An interactive Java programming learning application.</p><h3>Features</h3><ul style="text-align: left;"><li>Syntax-highlighted code editor</li><li>Intelligent code completion</li><li>Task-based learning system</li><li>Progress tracking</li><li>Reference documentation</li></ul><hr><p style="color: #64748b; font-size: 12px;">Built with Java & Spring Framework</p></div>
 # Documentation Dialog
 documentation.title=Documentation
 documentation.notAvailable=<h1>Documentation</h1><p>Documentation is not available.</p>
