--- a/desktop-client/src/main/resources/i18n/messages_es.properties
+++ b/desktop-client/src/main/resources/i18n/messages_es.properties
@@ -33,7 +33,7 @@ registration.success=¡Estás registrado! Usa tus credenciales para iniciar sesi
 registration.error.checkForm=Por favor, verifica el formulario e intenta de nuevo
 registration.error.generic=Ocurrió un error. Por favor, intenta de nuevo.
 # Main Frame
-main.title=SwingTeacher Desktop
+main.title=Java Swing Tutor
 main.lessonLabel=Lección:
 main.taskLabel=Tarea:
 main.taskCounter=Tarea {0} de {1}
@@ -91,8 +91,8 @@ placeholder.selectTaskBegin=<p>Selecciona una tarea para comenzar</p>
 placeholder.documentationNotAvailable=<p>Documentación no disponible</p>
 placeholder.selectTaskViewDoc=<p>Selecciona una tarea para ver la documentación</p>
 # About Dialog
-about.title=Acerca de SwingTeacher
-about.content=<div style="text-align: center; padding: 20px;"><h1>SwingTeacher Desktop</h1><p style="color: #94a3b8;">Versión 1.0-SNAPSHOT</p><hr><p>Una aplicación interactiva para aprender programación en Java.</p><h3>Características</h3><ul style="text-align: left;"><li>Editor de código con resaltado de sintaxis</li><li>Autocompletado inteligente de código</li><li>Sistema de aprendizaje basado en tareas</li><li>Seguimiento de progreso</li><li>Documentación de referencia</li></ul><hr><p style="color: #64748b; font-size: 12px;">Creado con Java & Spring Framework</p></div>
+about.title=Acerca de Java Swing Tutor
+about.content=<div style="text-align: center; padding: 20px;"><h1>Java Swing Tutor</h1><p style="color: #94a3b8;">Versión 1.0-SNAPSHOT</p><hr><p>Una aplicación interactiva para aprender programación en Java.</p><h3>Características</h3><ul style="text-align: left;"><li>Editor de código con resaltado de sintaxis</li><li>Autocompletado inteligente de código</li><li>Sistema de aprendizaje basado en tareas</li><li>Seguimiento de progreso</li><li>Documentación de referencia</li></ul><hr><p style="color: #64748b; font-size: 12px;">Creado con Java & Spring Framework</p></div>
 # Documentation Dialog
 documentation.title=Documentación
 documentation.notAvailable=<h1>Documentación</h1><p>La documentación no está disponible.</p>
