--- a/desktop-client/src/main/resources/i18n/messages_it.properties
+++ b/desktop-client/src/main/resources/i18n/messages_it.properties
@@ -33,7 +33,7 @@ registration.success=Sei registrato! Usa le tue credenziali per accedere
 registration.error.checkForm=Controlla il modulo e riprova
 registration.error.generic=Si è verificato un errore. Riprova.
 # Main Frame
-main.title=SwingTeacher Desktop
+main.title=Java Swing Tutor
 main.lessonLabel=Lezione:
 main.taskLabel=Compito:
 main.taskCounter=Compito {0} di {1}
@@ -91,8 +91,8 @@ placeholder.selectTaskBegin=<p>Seleziona un compito per iniziare</p>
 placeholder.documentationNotAvailable=<p>Documentazione non disponibile</p>
 placeholder.selectTaskViewDoc=<p>Seleziona un compito per visualizzare la documentazione</p>
 # About Dialog
-about.title=Informazioni su SwingTeacher
-about.content=<div style="text-align: center; padding: 20px;"><h1>SwingTeacher Desktop</h1><p style="color: #94a3b8;">Versione 1.0-SNAPSHOT</p><hr><p>Un'applicazione interattiva per imparare la programmazione Java.</p><h3>Caratteristiche</h3><ul style="text-align: left;"><li>Editor di codice con evidenziazione della sintassi</li><li>Completamento automatico intelligente del codice</li><li>Sistema di apprendimento basato su compiti</li><li>Monitoraggio del progresso</li><li>Documentazione di riferimento</li></ul><hr><p style="color: #64748b; font-size: 12px;">Creato con Java & Spring Framework</p></div>
+about.title=Informazioni su Java Swing Tutor
+about.content=<div style="text-align: center; padding: 20px;"><h1>Java Swing Tutor</h1><p style="color: #94a3b8;">Versione 1.0-SNAPSHOT</p><hr><p>Un'applicazione interattiva per imparare la programmazione Java.</p><h3>Caratteristiche</h3><ul style="text-align: left;"><li>Editor di codice con evidenziazione della sintassi</li><li>Completamento automatico intelligente del codice</li><li>Sistema di apprendimento basato su compiti</li><li>Monitoraggio del progresso</li><li>Documentazione di riferimento</li></ul><hr><p style="color: #64748b; font-size: 12px;">Creato con Java & Spring Framework</p></div>
 # Documentation Dialog
 documentation.title=Documentazione
 documentation.notAvailable=<h1>Documentazione</h1><p>La documentazione non è disponibile.</p>
